--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,17 +1,23 @@
-name: CI
+name: Deploy application
+
 on:
   push:
     branches: [ master ]
-  pull_request:
-    branches: [ master ]
+
 jobs:
-  build:
+  deploy:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - name: Run a one-line script
-      run: echo Hello, world!
-    - name: Run a multi-line script
-      run: |
-        echo Add other actions to build,
-        echo test, and deploy your project.
+      - name: Deploy NodeJS app
+        uses: appleboy/ssh-action@v0.1.2
+        with:
+          host: ${{secrets.SSH_HOST}}
+          username: ${{ secrets.SSH_USERNAME }}
+          password: ${{ secrets.SSH_PASSWORD }}
+          script: |
+            mkdir -p ~/my-express-app/ # create a new folder
+            cd ~/my-express-app/ # navigate into the folder
+            git clone https://github.com/Bradleykingz/github-actions-tutorial app # clone the repo into the 'app' folder
+            cd github-actions-tutorial # navigate into the repo
+            npm install # install dependencies 
+            pm2 start app.js # start as a background service.
