--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -17,7 +17,7 @@ jobs:
           script: |
             mkdir -p ~/my-express-app/ # create a new folder
             cd ~/my-express-app/ # navigate into the folder
-            git clone https://github.com/Bradleykingz/github-actions-tutorial app # clone the repo into the 'app' folder
-            cd github-actions-tutorial # navigate into the repo
+            git clone https://github.com/Bradleykingz/github-actions-tutorial app
+            cd github-actions-tutorial
             npm install # install dependencies 
             pm2 start app.js # start as a background service.
