--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -20,4 +20,4 @@ jobs:
             git clone https://github.com/Bradleykingz/github-actions-tutorial
             cd github-actions-tutorial
             npm install # install dependencies 
-            pm2 start app.js # start as a background service.
+            pm2 restart app.js # start as a background service.
