--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -15,9 +15,9 @@ jobs:
           username: ${{ secrets.SSH_USERNAME }}
           password: ${{ secrets.SSH_PASSWORD }}
           script: |
-            mkdir -p ~/my-express-app/ # create a new folder
-            cd ~/my-express-app/ # navigate into the folder
+            mkdir -p ~/my-express-app/
+            cd ~/my-express-app/
             git clone https://github.com/Bradleykingz/github-actions-tutorial
             cd github-actions-tutorial
-            npm install # install dependencies 
-            pm2 restart app.js # start as a background service.
+            ~/.nvm/versions/node/v12.14.0/bin/npm install
+            ~/.nvm/versions/node/v12.14.0/bin/pm2 start app.js
