--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -17,7 +17,7 @@ jobs:
           script: |
             mkdir -p ~/my-express-app/
             cd ~/my-express-app/
-            git clone https://github.com/Bradleykingz/github-actions-tutorial
-            cd github-actions-tutorial
-            ~/.nvm/versions/node/v12.14.0/bin/npm install
-            ~/.nvm/versions/node/v12.14.0/bin/pm2 start app.js
+            git clone https://github.com/Hakalon/nodejs-pm2-example
+            cd nodejs-pm2-example
+            npm install
+            pm2 run start
